wip: improve graph

--- a/tools/background_tasks/searxng/uwsgi.ini
+++ b/tools/background_tasks/searxng/uwsgi.ini
@@ -5,11 +5,11 @@ http-socket = $(BIND_ADDRESS)
 
 # Number of workers (usually CPU count)
 # default value: %k (= number of CPU core, see Dockerfile)
-workers = 1
+workers = %k
 
 # Number of threads per worker
 # default value: 4 (see Dockerfile)
-threads = 1
+threads = 4
 
 # The right granted on the created socket
 chmod-socket = 666
